--- a/testing.html
+++ b/testing.html
@@ -1,3 +1,16 @@
-<h1>Hey, I am RISHY!</h1>
-<p>I am still Rishy!</p>
-<a href="https://google.com" target="_blank"title="SECRET STUFF OF RISHY! DO NOT OPEN">Rishy Stuff</a>
+<!DOCTYPE html>
+<html>
+<head>
+    <title> RISHY STUFF</title>
+</head>
+<body>
+	<h1>Hey, I am <i>RISHY</i>!</h1>
+	<p>I am still <b>RISHY</b>!</p>
+	<a href="https://google.com" target="_blank"title="SECRET STUFF OF RISHY! DO NOT OPEN">Rishy Stuff</a>
+	<p>My name is:<br>
+	WOOF WOOF</p>
+	<img src="https://hips.hearstapps.com/hmg-prod/images/dog-puppy-on-garden-ro
+	yalty-free-image-1586966191
+	.jpg?crop=0.752xw:1.00xh;0.175xw,0&resize=1200:*">
+</body>
+</html>
