--- a/testing.html
+++ b/testing.html
@@ -4,11 +4,11 @@
     <title> RISHY STUFF</title>
 </head>
 <body>
-	<h1>Hey, I am <i>RISHY</i>!</h1>
+	<h1>Hey, I am <i>RISHY</i>! <b>YESSIR!!!</b></h1>
 	<p>I am still <b>RISHY</b>!</p>
 	<a href="https://google.com" target="_blank"title="SECRET STUFF OF RISHY! DO NOT OPEN">Rishy Stuff</a>
-	<p>My name is:<br>
-	WOOF WOOF</p>
+	<p>His name is:<br>
+	RISHY DA GOAT!</p>
 	<img src="https://hips.hearstapps.com/hmg-prod/images/dog-puppy-on-garden-ro
 	yalty-free-image-1586966191
 	.jpg?crop=0.752xw:1.00xh;0.175xw,0&resize=1200:*">
